# EmbeddedAssessment-AIWorkflow

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Linux_Memory_Vulnerability_Analysis_Agent_Playbook.md  README.md  deploy.sh  pyproject.toml  requirements.txt  teardown.sh
collector/: __init__.py  api.py  config.py  models.py  orchestrator.py
collector/android/: __init__.py  runner.py
collector/common/: __init__.py  sanitize.py  transport.py
collector/linux/: __init__.py  baseline.py  forensic_storage.py  hardening_checks.py  hardware_comm.py  phase0_environment.py  phase1_memory.py  process_inventory.py  runner.py  service_port_inventory.py  service_process_map.py  system_info.py
config/: config.yaml
docs/: architecture.md  modules.md
n8n/: docker-compose.yml
n8n/workflows/: embedded_assessment.json  forensic_pipeline.json
parsers/: __init__.py  normalize.py
playbook/linux/: Baseline_Collection_Playbook.md  Hardening_Checks_Playbook.md  Hardware_Interface_Playbook.md  Phase0_Environment_Playbook.md  Phase1_Memory_Acquisition_Playbook.md  Process_Inventory_Playbook.md  Service_Port_Inventory_Playbook.md  Service_Process_Map_Playbook.md  System_Information_Playbook.md
report/: __init__.py  generator.py
report/templates/: report.html.j2  report.md.j2
tests/: conftest.py  test_api.py  test_config.py  test_models.py  test_orchestrator.py  test_transport.py
tests/linux/: conftest.py  test_baseline.py  test_forensic_storage.py  test_hardening_checks.py  test_hardware_comm.py  test_phase0_environment.py  test_phase1_memory.py  test_runner.py  (+4 more)
(+2 files in other folders)
