[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-assessment"
version = "0.1.0"
description = "Embedded security assessment platform — inventory, hardening, and reporting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "paramiko>=3.4.0,<4.0.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.5.0,<3.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "markdown>=3.5.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
